[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebbw"
version = "2021.1"
authors = [{name = "Jan Berges"}]
description = "Solve Eliashberg equations for finite bandwidths"
readme = "README.md"
urls = {Homepage = "https://bitbucket.org/berges/ebbw"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=2.7"

[tool.setuptools]
py-modules = ['ebbw', 'ebbw2']
